Values mysql is added in application

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,8 @@ server.port=8080
 marvel.api.url=https://gateway.marvel.com/v1/public/
 marvel.api.privatekey=${MARVEL_API_PRIVATE_KEY}
 marvel.api.publickey=${MARVEL_API_PUBLIC_KEY}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/api
+spring.datasource.username=admin
+spring.datasource.password=admin
