--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,6 @@ marvel.api.privatekey=${MARVEL_API_PRIVATE_KEY}
 marvel.api.publickey=${MARVEL_API_PUBLIC_KEY}
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/api
+spring.datasource.url=jdbc:mysql://localhost:3306/api-marvel
 spring.datasource.username=admin
 spring.datasource.password=admin
