--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 marvel.api.url=https://gateway.marvel.com/v1/public/
-marvel.api.privatekey=${MARVEL_API_PRIVATE_KEY}
-marvel.api.publickey=${MARVEL_API_PUBLIC_KEY}
+marvel.api.privatekey=84b119a80486787172dc2da17eceb9dba03ba196
+marvel.api.publickey=bdba0abc2f7cf798267b6477d0e2be5b
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/api-marvel
 spring.datasource.username=postgres
