--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/api-marvel
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+challenge.access.token.secret="simon"
+challenge.access.token.validity.second=3600
